# sparkinfer

./: .env.eval.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EVAL-TRUST.md  README.md  speedy
.github/: CODEOWNERS  FLAGGED.md  PULL_REQUEST_TEMPLATE.md  blocked-contributors.txt  copycats.json
.github/workflows/: build-attested-binaries.yml  cap-open-prs.yml  close-stale-prs.yml  copycat-guard.yml  eval-policy.yml  rtx5090-required.yml  sensitive-paths-guard.yml
.gittensor/: weights.json
bench/: .gitignore  README.md
bench/benchmarks/attention/: flash_decode_bench.py
bench/benchmarks/moe/: moe_routing_bench.py
bench/competitors/: README.md  latest-results.md  run_vllm_trtllm_rtx5090.sh
bench/competitors/results/qwen3_awq_rtx5090_20260703/: README.md
bench/competitors/results/qwen3_awq_rtx5090_20260703/scripts/: run_sglang_gptq_fix_16k.sh  run_sglang_gptq_fix_16k_mem.sh  run_sglang_gptq_fix_4k.sh  run_sglang_qwen_gptq_int4_fp8.sh  run_sglang_qwen_gptq_int4_fp8_long_no_graph.sh  run_sglang_qwen_gptq_int4_fp8_long_prefill_eager.sh  (+15 more)
bench/competitors/results/trtllm_nvfp4_20260703_attempt/: README.md
bench/competitors/results/vllm_nvfp4_20260703/: README.md
bench/configs/: pro6000.yaml  rtx5090.yaml  rtx_spark.yaml
bench/configs/models/: gemma4_26b_a4b.yaml  qwen36_35b_a3b.yaml  qwythos_9b.yaml
bench/configs/targets/: qwen36_q4km_rtx_spark.yaml
bench/quality/: README.md  run_quality.py  scorers.py
bench/quality/results/: llama_gsm8k_limit1.jsonl  llama_gsm8k_mmlu_limit5.jsonl  vllm_awq_gsm8k_mmlu_limit5.jsonl  vllm_awq_limit1.jsonl  vllm_awq_rest_limit3.jsonl
bench/results/: qwen3-30b-a3b_q4km_rtx5090.md
bench/scripts/: README.md  _common.sh  _eval_speed.sh  accuracy.sh  accuracy_compare.py  bench.sh  bisect_qwen36_acc.sh  dflash_accuracy.sh  evaluate.sh  evaluate_bidir.sh  evaluate_dual.sh  label.py  mtp_accuracy.sh  qwen36_compare_128_512.sh  run_all.sh  self_consistency.py  test_accuracy_cache.py  test_bench_sweep.py  test_bidir_headline.py  test_cb_prefill_score.py  test_guard_reject.py  test_label.py  test_prefill_label_merge.py  warm_llamacpp.sh
csrc/cuda/attention/: flash_decode_split.cu
dashboard/: README.md  data.js  data.json  index.html
docs/: miner-guide.md  polaris.md
eval/: README.md  backfill_dashboard.py  copycat_guard.py  copycat_sweep.py  pr_eval_bot.py  run_bot.sh  run_bot_cron.sh  run_sync_cron.sh  setup_labels.sh  sim_difficulty.py  test_pr_eval_bot.py  vast_eval.py
eval/polaris/: __init__.py  client.py  judge.py  sparkinfer_eval.pub  test_receipt.py
include/sparkinfer/kernels/: attention.h
kernels/: CMakeLists.txt
kernels/csrc/cuda/attention/: CMakeLists.txt  flash_decode.cu  flash_decode_global_hd512.cu  flash_decode_gqa8.cu  flash_decode_local_hd256.cu  flash_decode_split.cu  flash_prefill.cu  rope.cu  sparse_kv.cu
kernels/csrc/cuda/fused/: CMakeLists.txt  batched_prefill.cu  gdn_mega.cu  model_ops.cu  prefill_attn_mma.cu  prefill_attn_window.cu  prefill_fused_q8.cu  prefill_gdn_chunk.cu  prefill_gemm_fp8.cu  prefill_gemm_i8.cu  prefill_moe.cu  prefill_moe_finalize.cu  prefill_moe_mmq.cu  prefill_router_mma.cu  qwen36.cu  rmsnorm.cu
kernels/csrc/cuda/gemm/: CMakeLists.txt  gemm.cu  gemv.cu
kernels/csrc/cuda/moe/: CMakeLists.txt  expert_ffn.cu  expert_ffn_q4k.cu  moe_prefill_grouped.cu  moe_prefill_grouped_i8.cu  router.cu  router_gemm.cu
kernels/csrc/cuda/quant/: CMakeLists.txt  dequant_gguf.cu  dequant_gguf_fast.cu  dequant_rows_i8_fast.cu  expert_row_scale_i8.cu  ffn_down_requant.cu  proj_q4k_lloyd.cu  quant.cu
kernels/csrc/cutedsl/: README.md  bench_cutedsl.py  requirements-cu13.txt  run_all.sh  run_smoke.py
kernels/csrc/cutedsl/sparkinfer_cutedsl/: __init__.py  moe_swiglu.py  reference.py  router_gemm.py
kernels/include/sparkinfer/kernels/: attention.h  dequant_rows_i8_fast.h  expert_row_scale_i8.h  fused.h  gemm.h  moe.h  moe_prefill_grouped.h  prefill.h  prefill_attn_mma.h  prefill_attn_window.h  prefill_i8.h  prefill_moe.h  prefill_moe_mmq.h  prefill_router_mma.h  proj_requant.h  quant.h
kernels/tests/: CMakeLists.txt  cpu_reference_test.cpp
moe/: CMakeLists.txt
moe/configs/: qwen36_35b_a3b.yaml
moe/include/sparkinfer/moe/: engine.h  expert_cache.h
moe/src/: engine.cpp  expert_cache.cpp  router.cpp
moe/tests/: CMakeLists.txt  engine_guard_gpu_test.cpp  expert_cache_cpu_test.cpp  expert_cache_gpu_test.cpp
runtime/: CMakeLists.txt
runtime/csrc/cuda/: dflash_kernels.cu  kv_ops.cu
runtime/examples/: gemma4_gguf_bench.cpp  gemma4_gguf_generate.cpp  qwen35_generate.cpp  qwen35_ttft_bench.cpp  qwen3_gguf_bench.cpp  qwen3_gguf_cb_bench.cpp  qwen3_gguf_config.h  qwen3_gguf_dflash_bench.cpp  qwen3_gguf_dflash_check.cpp  qwen3_gguf_generate.cpp  qwen3_gguf_generate_spec.cpp  qwen3_gguf_mtp_check.cpp  qwen3_gguf_prefill_check.cpp  qwen3_gguf_score.cpp  thermal_sweep.cpp
runtime/include/sparkinfer/: decode.h  inference_engine.h  kv_cache.h  runtime.h  scheduler.h  spec_decode.h  thermal_governor.h
runtime/include/sparkinfer/models/: dflash_draft.h  dflash_kernels.h  gemma4.h  qwen35.h  qwen35_mtp.h  qwen_config.h
runtime/src/: decode_layer.cpp  gguf.cpp  gpu_stats.cpp  inference_engine.cpp  kv_cache.cpp  runtime.cpp  scheduler.cpp  spec_decode.cpp  thermal_governor.cpp
runtime/src/models/: dflash_draft.cpp  gemma4.cpp  qwen35.cpp  qwen35_mtp.cpp  qwen35_prefill.cpp  qwen35_prefill.h
runtime/tests/: CMakeLists.txt  batch_engine_gpu_test.cpp  decode_runner_gpu_test.cpp  gemma4_cpu_test.cpp  gguf_cpu_test.cpp  kv_allocate_repro.cpp  kv_cache_gpu_test.cpp  qwen35_gpu_test.cpp  qwen36_config_cpu_test.cpp  scheduler_cpu_test.cpp  spec_decode_cpu_test.cpp  thermal_governor_cpu_test.cpp
runtime/tools/: convert_gguf.py  convert_qwen35.py
server/: CMakeLists.txt  README.md  run.sh
server/include/: chat_tokenizer.hpp  model_engine.hpp  request_slots.hpp
server/scripts/: bench_api_vs_native.py  bench_api_vs_native.sh  bench_max_tokens.py  chat_tokens.py
server/src/: chat_tokenizer.cpp  model_engine.cpp  sparkinfer_server.cpp
src/models/: qwen35.cpp
(+53 files in other folders)
